Has all functionality

--- a/static/css/memos.css
+++ b/static/css/memos.css
@@ -3,7 +3,7 @@
  *    Styles for 'Memos' go in this file 
  */
 
-/* Nothing yet */
+/* Nothing yet
 
 .lyrics {
     margin-left: 3em;
@@ -13,3 +13,5 @@
 .attribution  {
     font-size: smaller;
 }
+
+*/
