fully functional/rough draft

--- a/templates/index.html
+++ b/templates/index.html
@@ -43,7 +43,7 @@
     {% for memo in session.memos %}
   <div class="memo">
   <div class="row">
-  <div class="subrow" style="border: thin green solid">
+  <div class="subrow" style="border: thin solid green">
   <div class="col-md-2">
       {{ memo.date | normal }}
   </div>
